@@ -129,6 +129,9 @@ NEWLINE, NEWLINE, NEWLINE
 
 #define MAX_TIME_STRING_LENGTH  31
 
+// This denotes when we don't know the file size.
+#define UNKNOWN_FILE_SIZE  -1
+
 // LINE_LENGTH is different between UNIX and WIN32 and is defined below 
 #define MAX_FILENAME_LENGTH   LINE_LENGTH - 41
 
@@ -289,7 +292,8 @@ memset(VAR,0,SIZE * sizeof(TYPE));
 
 
 // These are the types of files we can encounter while hashing 
-
+// Note these will be stored in a uint8_t, so should be between
+// zero and 255.
 #define stat_regular    0
 #define stat_directory  1
 #define stat_door       2
